[package]
name = "wolt"
version = "0.1.0"
authors = ["Romet Tagobert <sgzfxn@gmail.com>"]
edition = "2018"
description = "A reqwest/tokio based api wrapper for Wolt"
license = "MIT"
homepage = "https://github.com/amPerl/wolt-rs"
repository = "https://github.com/amPerl/wolt-rs"

[features]
long_test = []


[dependencies]
anyhow = "1.0.41"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.7.1", features = ["macros"] }